# The-Social-Auction-Network

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  deployment.yaml  docker-compose.yml  dotenv  items.txt  pyproject.toml  requirements.txt  setup.py  values.yaml
.devcontainer/: copy-kube-config.sh  devcontainer.json  post-create.sh
.gitlab/issue_templates/: userstory_template.md
docs/: mkdocs.yml  reporting.md  week1.md  week1.md.bak  week2.md  week3.md  week4.md  week5.md
src/tjts5901/: __init__.py  __main__.py  app.py  auth.py  currency.py  db.py  i18n.py  items.py  logging.py  models.py  notification.py  scheduler.py  utils.py  views.py
src/tjts5901/static/: style.css
src/tjts5901/templates/: base.html  index.html.j2  money-tag.html
src/tjts5901/templates/auth/: login.html  profile.html  tokens.html  (+1 more)
tests/: conftest.py  test_app.py  test_factory.py  test_i18n.py  test_smoke.py
tmp/devcontainers-0785546a-5d4f-4e8a-94ac-37de8fb85b4c1675502267682/: env-loginInteractiveShell.json
tmp/devcontainers-1ffb6718-f4d8-47b6-a82b-f8e9f5430c021675454938824/: env-loginInteractiveShell.json
tmp/devcontainers-28cb1145-3783-4ecc-a84e-931c853a19451675541615895/: env-loginInteractiveShell.json
tmp/devcontainers-2a792d60-8034-44c0-90f6-2c84dd19bf671675539342005/: env-loginInteractiveShell.json
tmp/devcontainers-71e97347-922d-47d3-b1a0-45fc958d74a81675455236574/: env-loginInteractiveShell.json
tmp/devcontainers-af394cff-22b5-4168-89ef-3617dbcf06141675455251870/: env-loginInteractiveShell.json
(+5 files in other folders)
